k8s-basics-lohika/practice-6/helm/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /rgederin/v1(/|$)(.*)
            backend:
              serviceName: app-ver1-service
              servicePort: 8080
          - path: /rgederin/v2(/|$)(.*)
            backend:
              serviceName: app-ver2-service
              servicePort: 8080
